overlap bug with waves fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -68,7 +68,7 @@ body{font-family:'Lato', sans-serif;font-size:16px}body.active{overflow:hidden;z
 #about h2{color:#374054}
 #about p{color:black;margin:0}
 
-#experience{padding:50px 15px;text-align:center;border-bottom:1px solid #86377b}
+#experience{padding:50px 15px;text-align:center;border-bottom:1px solid #86377b;  position: relative; background: #f2f2f2;z-index: 20}
 #experience h2{color:#374054}
 .experience-box {box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); }
 #experience-timeline{margin:30px auto 0 auto;position:relative;max-width:1000px}
